# FootstepPlanner

./: .gitignore  CMakeLists.txt  README.md
LL_integrator/dynamics/: RobotModel.cpp  RobotModel.hpp
LL_integrator/dynamics/A1/: A1_Dynamics_upr.cpp
LL_integrator/dynamics/Go1_wFoot/: A1_C.cpp  A1_D_B_G.cpp  A1_Dynamics.cpp  A1_FK.cpp  A1_Jaco.cpp  A1_Jaco_dot.cpp
datalog/: HLdataplotter_casadi.m  contact_index.txt  desired_state.txt  foot_position.txt  footforce.txt  forceinitial.txt  state.txt
global_include/: global_loco_opts.h  global_loco_structs.hpp  shared_structs_ex.hpp
include/: ContactEst.hpp  DataLog.hpp  LocoWrapperwalk.hpp  LowLevelCtrl.hpp  MPC_global_params.hpp  MotionPlanner.hpp  SRBNMPC.hpp  SRBNMPCR.hpp  VirtualConstraints.hpp  math_define.h  parameters.h
material_collection/: collection.material
params/: LL_joystick.txt  LL_w_CLF.txt  Parameters.cpp  Parameters.hpp  Walking_joystick.txt  Walking_params.txt
raisimOgre_include/: helper2.hpp  raisimBasicImguiPanel.hpp  randyImguiPanel.hpp
rsc/: activation.raisim  srb_a1.urdf  srb_a1_upright.urdf  srbx2.urdf  srbx2_a1.urdf  srbx2_a1_2m.urdf
rsc/A1/: A1_modified_new_up.urdf  A1_modified_up.urdf  A1_modified_up_mod.urdf  A1_modified_up_mod_2.urdf  A1_modified_up_mod_3.urdf  A1_modified_up_mod_test.urdf  A1_upright_new.urdf  A1_upright_test.urdf  upright_robot
rsc/material/: myMaterials.material
src/: A1_up_walk.cpp  ContactEst.cpp  DataLog.cpp  LocoWrapperwalk.cpp  LowLevelCtrl.cpp  MotionPlanner.cpp  SRBNMPC.cpp  SRBNMPCR.cpp  VirtualConstraints.cpp  imgui.ini  upright_NMPC.cpp  upright_NMPCR.cpp  upright_nlp_17r.c  upright_nlp_1r.c
util_include/: Bezier.h  EigenUtils.hpp  Filters.h  Transforms.hpp
